--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd client && npm run dev"
+    "start1": "npm i && cd client && npm run dev",
+    "start2": "npm i && cd client && npm run build && cd .. && cd server && node ./index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.2"
   },
   "devDependencies": {
