test new start command for AWS

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start1": "npm i && cd client && npm run dev",
-    "start2": "npm i && cd client && npm run build && cd .. && cd server && node ./index.js"
+    "start2": "npm i && cd client && npm i && npm run build && cd .. && cd server && node ./index.js"
   },
   "author": "",
   "license": "ISC",
