--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.2"
+    "node": "^21.2.0",
+    "nodemon": "^3.0.2",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "prisma": "^5.6.0"
