--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@prisma/client": "^5.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "gitignore": "^0.7.0",
     "morgan": "^1.10.0",
     "node": "^21.2.0",
     "nodemon": "^3.0.2",
     "path": "^0.12.7",
     "styled-components": "^6.1.1",
-    "uninstall": "^0.0.0"
+    "uninstall": "^0.0.0",
+    "vite": "^5.0.5"
   },
   "devDependencies": {
     "prisma": "^5.6.0"
