--- a/package.json
+++ b/package.json
@@ -11,22 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.20",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.7",
     "@prisma/client": "^5.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "gitignore": "^0.7.0",
     "morgan": "^1.10.0",
-    "node": "^21.2.0",
     "nodemon": "^3.0.2",
-    "path": "^0.12.7",
-    "styled-components": "^6.1.1",
-    "uninstall": "^0.0.0",
-    "vite": "^5.0.5"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "prisma": "^5.6.0"
