--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "gitignore": "^0.7.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "prisma": "^5.6.0"
